# aprsd-weewx-plugin

./: CONTRIBUTING.rst  ChangeLog  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
aprsd_weewx_plugin/: __init__.py  aprsd_weewx_plugin.py  cli.py  weewx.py
aprsd_weewx_plugin/conf/: __init__.py  main.py  opts.py  weewx.py
docs/: Makefile  changelog.rst  conf.py  history.rst  index.rst  installation.rst  make.bat  readme.md  usage.rst
docs/apidoc/: aprsd_weewx_plugin.conf.rst  aprsd_weewx_plugin.rst  modules.rst
tests/: __init__.py  test_aprsd_weewx_plugin.py
