[metadata]
name = aprsd_weewx_plugin
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Walter A. Boring IV
author_email = waboring@hemna.com
license_file = LICENSE
classifier =
    Topic :: Communications :: Ham Radio
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description_file =
    README.rst
project_urls =
    Source=https://github.com/hemna/aprsd-weewx-plugin
    Tracker=https://github.com/hemna/aprsd-weewx-plugin/issues
summary = HAM Radio APRSD that reports weather from a weewx weather station.

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    aprsd_weewx_plugin

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[mypy]
ignore_missing_imports = True
strict = True
